Updated hmtl and javascript. started creating a menu with list items.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <section id="menu">
             <!-- Menu items will be dynamically generated here -->
         </section>
+        <div id="menu"></div>  <!-- Menu will be displayed -->
+
         <section id="order">
             <h2>Your Order</h2>
             <ul id="order-items">
